--- a/style.css
+++ b/style.css
@@ -72,16 +72,21 @@ header {
 }
 
 #fotoPerfil {
-    background-color: red;
+    width: 100%;
     border-radius: 100%;
+    padding: 10px;
+}
+
+#divfotoPerfil {
+    background-color: red;
     display: flex;
     position: absolute;
     max-width: 200px;
     max-height: auto;
     top: 30px;
-    right: 70%;
+    right: 60%;
 }
-#textTitle {
+#divtextTitle {
     display: flex;
     flex-direction: column;
     position: absolute;
