--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ header {
     filter: invert(1);
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 400px) {
     #Fundo {
         border-radius: 0;
         max-width: 100%;
@@ -125,6 +125,8 @@ header {
     max-height: 200px;
     top: 375px;
     font-family: sans-serif;
+    text-align: justify;
+    text-indent: 75px;
 }
 
 
@@ -132,14 +134,18 @@ header {
 
 /*FOOTER*/
 
+#textFooter {
+    position: relative;
+    top: 600px;
+}
+
 footer {
     display: flex;
     position: relative;
     max-width: 544px;
     max-height: 100px;
-    top: 500px;
     margin: auto;
-
+    bottom: 10px;
 }
 
 span {
