--- a/style.css
+++ b/style.css
@@ -113,13 +113,13 @@ header {
 
 /*MAIN*/
 
-  main>p {
+  #fundoMain {
     background-color: rgb(63, 101, 72);
     margin: auto;
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
-    padding: 20px;
     position: relative;
+    padding: 20px;
     max-width: 800px;
     min-height: 150px;
     max-height: 250px;
@@ -129,6 +129,16 @@ header {
     text-indent: 75px;
 }
 
+#textMain {
+    position: absolute;
+    max-width: 800px;
+    min-height: 150px;
+    max-height: 250px;
+    top: 375px;
+    font-family: sans-serif;
+    text-align: justify;
+    text-indent: 75px;
+}
 
 
 
