--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     margin: 0%;
 }
 body {
-    background-color: #2e2b31;
+    background-color: #2b2d31;
     color: white;
     font-family: Arial;
 }
@@ -12,7 +12,7 @@ body {
 
 header {
     position: absolute;
-    background-color: rgb(89, 100, 100);
+    background-color: rgb(89, 91, 100);
     width: 100%;
     height: 50px;
     border-bottom-left-radius: 10px;
@@ -24,11 +24,12 @@ header {
     width: 35px;
     top: 7px;
     left: 12px;
-
+    opacity: 30%;
 }
 
 #imgMenu:hover {
     filter: invert(1);
+    opacity: 100%;
 }
 
 @media screen and (max-width: 300px) {
@@ -41,7 +42,7 @@ header {
 #Fundo {
     position: relative;
     display: flex;
-    background: #1f5b4a;
+    background: #213c63;
     max-width: 900px;
     height: 300px;
     min-height: 200px;
@@ -61,8 +62,6 @@ header {
 }
 
 .logoSocial {
-    
-    transition: opacity 0.5s ease-out;
     opacity: 30%;
 }
 .logoSocial:hover {
@@ -114,7 +113,7 @@ header {
 /*MAIN*/
 
   #fundoMain {
-    background-color: rgb(63, 101, 72);
+    background-color: rgb(32, 42, 71);
     margin: auto;
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
