--- a/style.css
+++ b/style.css
@@ -59,11 +59,8 @@ header {
 }
 
 .logoSocial {
-    width: 35px;
-}
-
-.logoSocial {
     opacity: 30%;
+    width: 35px;
 }
 .logoSocial:hover {
     filter: invert(1);
@@ -110,16 +107,27 @@ header {
     font-size: 13px;
 }
 
+
+#areaPrin {
+    position: absolute;
+    display: block;
+    width: 50%;
+    max-height: 70px;
+    top: 150px;
+}
+
 #areasLinguagens {
     border-radius: 10px;
     padding: 5px;
     background-color: rgb(44, 102, 156);
-    position: absolute;
-    top: 160px;
-    left: 45%;
+    position: relative;
+    display: block;
+    left: 100%;
     max-width: 300px;
-    max-height: 100px;
+    min-height: 85px;
     box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.3);
+    transition: width 0.5s ease-in-out;
+    margin-right: 10px;
 }
 
 #areasLinguagens>h2 {
@@ -134,12 +142,17 @@ header {
     justify-content: center;
     align-items: center;
     margin: 10px;
+    width: auto;
+    transition: width 0.5s ease-in-out;
 }
 
 .areaLogo {
     position: relative;
-    display: flex;
-    width: 60px;
+    display: block;
+    min-width: 30px;
+    min-height: 30px;
+    max-width: 60px;
+    max-height: 60px;
     justify-content: center;
     align-items: center;
 }
