--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
 
 header {
     position: absolute;
-    background-color: rgb(89, 91, 100);
+    background-color: rgb(68, 70, 82);
     width: 100%;
     height: 50px;
     border-bottom-left-radius: 10px;
@@ -43,13 +43,14 @@ header {
     position: relative;
     display: flex;
     background: #213c63;
+    background-image: linear-gradient(45deg, #213c63, rgba(23, 0, 39, 0.541));
     max-width: 900px;
     height: 300px;
     min-height: 200px;
     top: 125px;
     margin: auto;
     border-radius: 10px;
-    box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.3);
+    box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.5);
 }
 
 #Social {
@@ -119,13 +120,13 @@ header {
 #areasLinguagens {
     border-radius: 10px;
     padding: 5px;
-    background-color: rgb(44, 102, 156);
+    background-image: linear-gradient(to bottom, rgb(44, 102, 156), rgba(31, 22, 32, 0.253));
     position: relative;
     display: block;
     left: 100%;
     max-width: 300px;
     min-height: 85px;
-    box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.3);
+    box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.5);
     transition: width 0.5s ease-in-out;
     margin-right: 10px;
 }
@@ -161,19 +162,19 @@ header {
 
   #fundoMain {
     background-color: rgb(33, 43, 73);
+    background-image: linear-gradient(to right, rgb(33, 43, 73), rgba(29, 21, 37, 0.651));
     margin: auto;
-    border-bottom-left-radius: 10px;
-    border-bottom-right-radius: 10px;
+    border-radius: 10px;
     position: relative;
     padding: 20px;
     max-width: 800px;
     min-height: 150px;
     max-height: 250px;
-    top: 375px;
+    top: 400px;
     font-family: sans-serif;
     text-align: justify;
     text-indent: 75px;
-    box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.3);
+    box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.6);
 }
 
 #textMain {
