--- a/style.css
+++ b/style.css
@@ -8,6 +8,17 @@ body {
     font-family: Arial;
 }
 
+
+
+#camadaM {
+    width: 200px;
+    height: 400px;
+    background-color: #ccc;
+    position: absolute;
+    left: -200px;
+    transition: left 0.5s ease;
+}
+
 /**HEADER**/
 
 header {
