--- a/style.css
+++ b/style.css
@@ -2,6 +2,8 @@
     padding: 0%;
     margin: 0%;
     user-select: none;
+    user-zoom: fixed;
+    z-index: 1;
 }
 body {
     background-color: #2b2d31;
@@ -9,7 +11,15 @@ body {
     font-family: Arial;
 }
 
-
+#sombra {
+    position: absolute;
+    background-color: black;
+    width: 100%;
+    height: 100%;
+    z-index: 2;
+    opacity: 0;
+    transition: all 0.5s ease;
+}
 
 #camadaM {
     width: 200px;
@@ -18,7 +28,7 @@ body {
     position: absolute;
     left: -200px;
     transition: all 0.5s ease;
-    z-index: 1;
+    z-index: 3;
 }
 
 /**HEADER**/
@@ -31,7 +41,7 @@ header {
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
     box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.3);
-    z-index: 2;
+    z-index: 3;
 }
 
 #imgMenu {
@@ -116,13 +126,13 @@ header {
 
 .menuText {
     position: relative;
-
+    display: flex;
     border-radius: 5px;
-    top: 65px;
-    padding: 10px 100px 10px 25px;
-    margin: 10px 100px 10px 25px;
-    width: 150px;
-    height: 150px;
+    top: 70px;
+    padding: 10px 0px 10px 15px;
+    margin-top: -10px;
+    width: 78%;
+    height: 15px;
     left: 15px;
     text-decoration: none;
     color: white;
@@ -161,7 +171,7 @@ header {
     font-family: Arial;
     font-size: 15px;
     text-align: center;
-    user-select: text;
+    user-select: all;
 }
 
 #regiaoLinguagens {
@@ -220,6 +230,7 @@ header {
 /*FOOTER*/
 
 #textFooter {
+    user-select: text;
     position: relative;
     top: 240px;
 }
