--- a/style.css
+++ b/style.css
@@ -14,11 +14,12 @@ body {
 #sombra {
     position: absolute;
     background-color: black;
+    left: -100%;
     width: 100%;
     height: 100%;
     z-index: 2;
     opacity: 0;
-    transition: all 0.5s ease;
+    transition: opacity 0.5s ease;
 }
 
 #camadaM {
