--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
 
 #sombra {
     position: absolute;
-    background-color: black;
+    background-color: red;
     left: -100%;
     width: 100%;
     height: 100%;
